@@ -5,6 +5,8 @@
 
  * Show a proper error message when the connection to MPD fails
  * Show artists in search result pages again
+ * Tracks with artist featuring others no longer trigger compilation mode
+ * Genre/artist links can now be opened in a new browser tab
  * Reduced the number of HTTP requests when the current song has no cover art
  * Generally reduced the number of requests to mpd
  * Fixed an issue that could cause errors when modwsgi reloaded the application
